# rained

./: .gitignore  .gitmodules  CREDITS.md  CanvasWidget.cs  GeometryEditor.cs  LICENSE.md  Level.cs  Program.cs  README.md  RainEd.cs  RlManaged.cs  TODO.txt  build.cake  copy-internal.lua  gen-cast-map.lua  imgui.ini  level-format-docs.txt  lua-imgui-gen.py  mkdocs.yml  publish.ps1  rained.csproj  rained.sln  rlImgui.cs  shader-preprocessor.py
EditTabs/: GeometryEditor.cs
assets/: imgui.ini
config/: autotiles.txt  imgui.ini
data/: levelinit.txt  sample-level.txt  sample-level2.txt  sample-level3.txt
docs/: asset-management.md  brief.md  developing.md  index.md  level-view.md  overview.md  resize.md  resources.md  updates.md  user-interface.md
glshaders/: bevel.frag.glsl  bitmap_render_preview.frag.glsl  effect_matrix.frag.glsl  grid.frag.glsl  grid.vert.glsl  imgui.frag.glsl  imgui.vert.glsl  inv_bilinear.glsl  invert.frag.glsl  level_light.frag.glsl  lightmap_stretch.frag.glsl  outline_marquee.frag.glsl  palette.frag.glsl  palette.glsl  prelude.glsl  prop_fade.frag.glsl  render_preview.frag.glsl  softprop.frag.glsl  tile.frag.glsl  uv_repeat.frag.glsl
scripts/: helpers.lua  init.lua  rendercopy.lua  thin-pipes.lua
shaders/: bevel_fs.sc  bitmap_render_preview_fs.sc  default_vs.sc  effect_matrix_fs.sc  grid_fs.sc  grid_vs.sc  imgui_fs.sc  imgui_varying.def.sc  imgui_vs.sc  invert_fs.sc  level_light_fs.sc  palette.sh  palette_fs.sc  prop_fade_fs.sc  render_preview_fs.sc  softprop_fs.sc  (+3 more)
src/Bgfx/c-interop/: .gitignore  main.c  meson.build  meson.options
(+575 files in other folders)
